<resources>
    <string name="app_name">Connectify</string>
    <!-- Login & Signup -->
    <string name="signup_title">Tạo tài khoản</string>
    <string name="login_title">Đăng nhập</string>
    <string name="hint_name">Họ tên</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="hint_re_password">Nhập lại mật khẩu</string>
    <string name="btn_signup">Đăng ký</string>
    <string name="btn_signin_google">Đăng nhập với Google</string>
    <string name="back_to_login">Đã có tài khoản, đăng nhập</string>
    <string name="create_account">Tạo tài khoản</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="error">Lỗi: </string>
    <string name="email_recover">Khôi phục</string>
    <string name="password_reset_email">Mật khẩu khôi phục email gửi thành công</string>
    <string-array name="language">
        <item>Tiếng việt</item>
        <item>Tiếng anh</item>
    </string-array>
    <string name="language_english">Tiếng anh</string>
    <string name="language_vietnamese">Tiếng việt</string>
    <!-- Validate    -->
    <string name="invalid_name">Vui lòng nhập tên hợp lệ</string>
    <string name="invalid_email">Vui lòng nhập email hợp lệ</string>
    <string name="verify_email">Vui lòng xác nhận email</string>
    <string name="verify_email_link">Đường dẫn xác thực email đã được gửi</string>
    <string name="invalid_password">Vui lòng nhập mật khẩu hợp lệ</string>
    <string name="invalid_password_length">Mật khẩu chứa ít nhất 6 kí tự</string>
    <string name="password_not_match">Mật khẩu không trùng khớp</string>
    <!-- Home    -->
    <string name="view_all_comments">Xem tất cả bình luận</string>
    <string name="like">Lượt thích</string>
    <string name="likes">Lượt thích</string>
    <string name="share_link">Chia sẻ liên kết ...</string>
    <string name="allow_per">Vui lòng cấp quyền cho ứng dụng</string>
    <string name="see_all">Xem tất cả</string>
    <string name="comments"> bình luận</string>
    <!-- Profile    -->
    <string name="followers">Người theo dõi</string>
    <string name="following">Đang theo dõi</string>
    <string name="follow">Theo dõi</string>
    <string name="say_hi">Trò chuyện</string>
    <string name="posts">Bài đăng</string>
    <string name="unfollow">Hủy theo dõi</string>
    <string name="start_chat">Bắt đầu trò chuyện</string>
    <string name="follow_noti"> đã theo dõi bạn.</string>
    <!-- Add   -->
    <string name="comment_post">Nói gì đó về bài viết này</string>
    <string name="uploaded">Đăng thành công</string>
    <string name="upload_failed">Đăng không thành công</string>
    <string name="updated_successful">Cập nhật thành công</string>
    <!-- Search   -->
    <string name="search">Tìm kiếm...</string>
    <!-- Comment    -->
    <string name="comment">Nhập bình luận</string>
    <string name="no_comment">Không có bình luận</string>
    <string name="comment_failed">Bình luận không thành công: </string>
    <!-- Chat   -->
    <string name="smt_went_wrong">Có vấn đề xảy ra</string>
    <string name="message_title">Tin nhắn</string>
    <!-- Story   -->
    <string name="upload_title">Đang tải lên…</string>
    <string name="data_null">Không tìm thấy dữ liệu</string>
    <!-- reminder    -->
    <string name="exit_click_twice">Nhấn lần nữa để thoát</string>
    <!-- Setting   -->
    <string name="settings">Cài đặt</string>
    <string name="qr_code">QR Code</string>
    <string name="dark_mode">Dark mode</string>
    <string name="logout">Đăng xuất</string>
    <string name="dialog_qr">Mã QR của bạn</string>
    <string name="agora_app_id">1f4bb349ea1641309a259d5716f6baec</string>
</resources>