<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".ui.fragments.CreateAccountFragment">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_78"
            android:layout_gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/colorGreen"
            android:textSize="@dimen/sp_24"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:background="@drawable/text_box"
            android:hint="@string/hint_email"
            android:padding="@dimen/dp_12" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/recoverBtn"
        android:layout_below="@id/ll1"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <Button
        android:id="@+id/recoverBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/loginTV"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginEnd="@dimen/dp_32"
        android:layout_marginBottom="@dimen/dp_18"
        android:background="@drawable/btn_bg"
        android:text="@string/email_recover"
        android:textColor="@color/white" />


    <TextView
        android:id="@+id/loginTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_26"
        android:text="@string/login_title"
        android:textColor="@color/colorGreen"
        android:textStyle="bold" />

</RelativeLayout>