<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/background_color"
    tools:context=".ui.activities.SettingActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="?attr/background_color"
        android:elevation="@dimen/dp_2"
        app:contentInsetEnd="@dimen/dp_0"
        app:contentInsetStart="@dimen/dp_0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_10"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/settings"
                android:textColor="?attr/text_color"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/rl_qr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:padding="@dimen/dp_18">

        <ImageView
            android:id="@+id/iv_qr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_qr_code_scanner_24"
            android:contentDescription="null" />

        <TextView
            android:id="@+id/tv_qr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qr_code"
            android:textStyle="bold"
            android:textSize="@dimen/sp_18"
            android:textColor="?attr/text_color"
            android:layout_toEndOf="@+id/iv_qr"
            android:layout_marginStart="@dimen/dp_24"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_below="@id/rl_qr"/>

    <RelativeLayout
        android:id="@+id/rl_darkmode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_qr"
        android:padding="@dimen/dp_18">

        <ImageView
            android:id="@+id/iv_darkmode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_dark_mode_24"
            android:layout_centerVertical="true"
            android:contentDescription="null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_mode"
            android:textStyle="bold"
            android:textSize="@dimen/sp_18"
            android:textColor="?attr/text_color"
            android:layout_toEndOf="@+id/iv_darkmode"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_centerVertical="true"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_darkmode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_below="@id/rl_darkmode"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginEnd="@dimen/dp_32"
        android:layout_alignParentBottom="true">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/exitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:text="@string/logout"
            android:layout_marginBottom="@dimen/dp_32"
            android:textColor="#fff" />
    </LinearLayout>
</RelativeLayout>