<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    tools:context=".ui.fragments.Profile">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="?attr/background_color"
        android:elevation="@dimen/dp_2"
        app:contentInsetEnd="@dimen/dp_0"
        app:contentInsetStart="@dimen/dp_0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/toolbarNameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="username"
                android:textColor="?attr/text_color"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/settingBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_12"
                android:layout_marginTop="@dimen/dp_12"
                android:layout_marginEnd="@dimen/dp_12"
                android:layout_marginBottom="@dimen/dp_12"
                android:background="@drawable/baseline_settings_24"
                android:contentDescription="@null" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linear_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_100">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImage"
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_100"
                android:layout_marginStart="@dimen/dp_14"
                android:layout_marginTop="@dimen/dp_14"
                android:layout_marginEnd="@dimen/dp_14"
                android:layout_marginBottom="@dimen/dp_14"
                app:civ_border_color="#76D1FA"
                app:civ_border_width="@dimen/dp_1" />

            <ImageButton
                android:id="@+id/edit_profileImage"
                android:layout_width="@dimen/dp_34"
                android:layout_height="@dimen/dp_34"
                android:layout_alignEnd="@id/profileImage"
                android:layout_alignRight="@id/profileImage"
                android:layout_alignBottom="@id/profileImage"
                android:background="@drawable/ic_circle"
                android:elevation="@dimen/dp_3"
                android:src="@drawable/ic_edit"
                android:visibility="visible" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:padding="@dimen/dp_4"
                android:text="Username"
                android:textColor="?attr/text_color"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/statusTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:padding="@dimen/dp_4"
                android:text="Love to travel around the world"
                android:textColor="?attr/text_color"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/combinedLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_1">

        <LinearLayout
            android:id="@+id/countLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/followingCountTv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textAlignment="center"
                    android:textColor="?attr/text_color"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/following"
                    android:textAlignment="center"
                    android:textColor="?attr/text_color"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/followersCountTv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textAlignment="center"
                    android:textColor="?attr/text_color"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/followers"
                    android:textAlignment="center"
                    android:textColor="?attr/text_color"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/postCountTv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textAlignment="center"
                    android:textColor="?attr/text_color"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/posts"
                    android:textAlignment="center"
                    android:textColor="?attr/text_color"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/countLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_12"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/startChatBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_4"
                android:layout_marginEnd="@dimen/dp_4"
                android:background="@drawable/btn_bg"
                android:minWidth="@dimen/dp_160"
                android:text="@string/say_hi"
                android:textColor="@color/white"
                android:visibility="visible" />

            <Button
                android:id="@+id/followBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_4"
                android:background="@drawable/btn_bg"
                android:minWidth="@dimen/dp_160"
                android:text="@string/follow"
                android:textColor="@color/white"
                android:visibility="visible" />

        </LinearLayout>


    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_2"
        android:layout_below="@id/combinedLayout"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_8"
        android:background="#C8C8C8" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/view" />


</RelativeLayout>